--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -40,29 +40,22 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+            <img class="icon" src="../../home/images-global/logo-branca.svg" alt="logo" />
             <i class="bx bx-menu" id="btn"></i>
         </div>
             <li>
-                <a href="#">
+                <a href="../cursos/index.html">
                     <i class="bx bx-group"></i>
-                    <span class="links_name">Turmas existentes</span>
+                    <span class="links_name">Cursos existentes</span>
                 </a>
-                <span class="tooltip">Turmas</span>
+                <span class="tooltip">Cursos</span>
             </li>
             <li>
-                <a href="#">
+                <a href="../usuarios/index.html">
                     <i class="bx bx-user"></i>
                     <span class="links_name">Usuários cadastrados</span>
                 </a>
                 <span class="tooltip">Usuários</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-user-plus"></i>
-                    <span class="links_name">Cadastrar novo usuário</span>
-                </a>
-                <span class="tooltip">Novo usuário</span>
             </li>
             <li>
                 <a href="#">
@@ -72,7 +65,7 @@
                 <span class="tooltip">Avaliações</span>
             </li>
             <li class="profile">
-                <a href="#">
+                <a href="../../home/login/index.html">
                     <i class="bx bx-log-out" id="log_out"></i>
                     <span class="links_name">Log Out</span>
                 </a>
