--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css" />
-    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
+    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
 
     <script src="./modal.js" defer></script>
     <script src="./script.js" defer></script>
@@ -116,61 +116,77 @@
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li>
+
                     <img src="./img/Line.svg" alt="" />
+
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li>
+
                     <img src="./img/Line.svg" alt="" />
+
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li>
+
                     <img src="./img/Line.svg" alt="" />
+
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li>
+
                     <img src="./img/Line.svg" alt="" />
+
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li>
+
                     <img src="./img/Line.svg" alt="" />
+
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
                             <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
+
                         <h2>PROFESSOR</h2>
                     </li> -->
                 </ul>
             </div>
             <div class="buttonAddUsuario">
-                <button onclick="showModal(), getArrayCursosProfessor()" type="button" class="addUsuario button5">
-                    <i class="fa fa-plus" style="font-size: 36px"></i>
-                </button>
+                <button onclick="showModal()" type="button" class="addUsuario button5">
+                    <i class="fa fa-plus" style="font-size: 36px"></i></button>
             </div>
         </div>
+
 
         <div id="container_usuario" class="container mt-5 container modal modal-listagem">
             <h1>USUÁRIO</h1>
@@ -210,6 +226,8 @@
                     <input id="view_user_grupo" type="text" class="form-control turma" disabled />
                 </div>
             </form>
+
+            <div class="buttons" id="div-btn-user-options"></div>
         </div>
 
         <div class="container mt-5 container modal modal-editar" id="modal-editar">
@@ -217,32 +235,31 @@
             <form class="row g-7">
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com" />
+                    <input id="edit_user_nome" type="text" class="form-control nome_do_usuario"/>
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
-                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba " />
+                    <input id="edit_user_email" type="email" class="form-control email_usuario"/>
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control senha" placeholder="42.591.538/0001-68" />
+                    <input id="edit_user_senha" type="password" class="form-control senha"/>
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <select class="form-select tipo-select" id="tipo-select-edit" onChange="deletarCampo()">
-                        <option selected>Professor</option>
-                    </select>
+                    <input id="edit_user_tipo" type="text" class="form-control tipo" disabled/>
+                    <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp" id="curso">
                     <label for="tipo-select" class="form-label">Curso</label>
-                    <select class="form-select mul-select" multiple="true">
+                    <select id="edit_user_curso" class="form-select mul-select" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -255,7 +272,20 @@
 
                 <div class="col-md-6 lab-inp" id="turma">
                     <label for="tipo-select" class="form-label">Turma</label>
-                    <select class="mul-select" multiple="true">
+                    <select id="edit_user_turma" class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="grupo">
+                    <label for="tipo-select" class="form-label">GRUPO</label>
+                    <select id="edit_user_grupo" class="mul-select" multiple="true">
                         <option value="Cambodia">Cambodia</option>
                         <option value="Khmer">Khmer</option>
                         <option value="Thiland">Thiland</option>
@@ -273,9 +303,7 @@
                 </script>
                 <div class="buttons">
                     <div class="col-md-3">
-                        <button class="primeiro_botao" type="button" onclick="showModalListagem()">
-                            CANCELAR
-                        </button>
+                        <button class="primeiro_botao" type="button" id="btn-cancelar-editar">CANCELAR</button>
                     </div>
 
                     <div class="col-md-3">
@@ -299,9 +327,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">
-                        CONFIRMAR
-                    </button>
+                    <button id="btn-excluir-usuario" class="terceiro_botao" type="button">CONFIRMAR</button>
                 </div>
             </div>
         </div>
